Fixed sigsegv error in bot

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
     depends_on:
       - postgres
       - aicaller
+      - bridge_server
     stdin_open: true
     expose:
       - 8080
