Added aicaller job to promethes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,15 @@ services:
     image: prom/prometheus:latest
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      '--config.file=/etc/prometheus/prometheus.yml'
     ports:
-      - "19090:9090"
+      - "9090:9090"
     networks:
       mynet:
         ipv4_address: 173.20.0.6
+    depends_on:
+      - aicaller
   postgres:
     build:
       context: .
