--- a/prometheus.yml
+++ b/prometheus.yml
@@ -9,4 +9,11 @@ scrape_configs:
     scrape_timeout: 15s
 
     static_configs:
-      - targets: ['173.20.0.6:9090']
+      - targets: ['localhost:9090']
+
+  - job_name: 'congratulationsServer'
+
+    scrape_interval: 15s
+    scrape_timeout: 15s
+    static_configs:
+      - targets: ['aicaller:8099']
