--- a/prometheus.yml
+++ b/prometheus.yml
@@ -17,3 +17,8 @@ scrape_configs:
     scrape_timeout: 15s
     static_configs:
       - targets: ['aicaller:8099']
+  - job_name: 'bridgeServer'
+    scrape_interval: 15s
+    scrape_timeout: 15s
+    static_configs:
+      - targets: ['bridge_server:8099']
