Raw cadvisor support

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,19 @@
 services:
+  cadvisor:
+    container_name: wisher_cadvisor
+    image: gcr.io/cadvisor/cadvisor:v0.47.1
+    restart: always
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:ro
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+      - /dev/disk/:/dev/disk:ro
+      - /var/run/docker.sock:/var/run/docker.sock:rw
+    ports:
+      - "8080:8080"
+    depends_on:
+      - bridge_server
   grafana:
     container_name: grafana
     image: grafana/grafana
