--- a/prometheus.yml
+++ b/prometheus.yml
@@ -9,16 +9,23 @@ scrape_configs:
     scrape_timeout: 15s
 
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['host.docker.internal:9090']
 
   - job_name: 'congratulationsServer'
 
     scrape_interval: 15s
     scrape_timeout: 15s
     static_configs:
-      - targets: ['aicaller:8099']
+      - targets: ['host.docker.internal:8098']
   - job_name: 'bridgeServer'
     scrape_interval: 15s
     scrape_timeout: 15s
     static_configs:
-      - targets: ['bridge_server:8099']
+      - targets: ['host.docker.internal:8099']
+  - job_name: 'cAdvisor'
+    scrape_interval: 15s
+    scrape_timeout: 15s
+    static_configs:
+      - targets: ['host.docker.internal:8080']
+
+
